--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -7,55 +7,51 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
 :root{
-  --green:#2cf891; --shell:#0a1b12; --shell-hi:#1d3827;
-  --shell-lo:#030906; --bezel:#06110b;
+  --green:#2cf891;         /* 글씨 형광 그린 */
+  --shell-dark:#020704;    /* 하우징 최어두움 */
+  --shell-mid:#0a1b12;     /* 하우징 기본 */
+  --shell-hi:#152b1e;      /* 위쪽 약간 밝음 */
 }
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Press Start 2P',monospace;
   user-select:none;-webkit-user-select:none;-ms-user-select:none;}
-html,body{height:100%;background:#000;
-  display:flex;justify-content:center;align-items:center;}
+html,body{height:100%;background:#000;display:flex;justify-content:center;align-items:center;}
 
-/* ── 1. 외곽 하우징 ── */
+/* ── 외곽 하우징 ── */
 .shell{
   position:relative;width:920px;height:620px;border-radius:38px;
   padding:34px 36px 130px;
-  background:linear-gradient(180deg,var(--shell-hi) 0%,var(--shell) 50%,var(--shell-lo) 100%);
+  /* 중앙 원형 그라데이션 삭제 → 상-하 살짝 명암만 */
+  background:linear-gradient(180deg,var(--shell-hi) 0%,var(--shell-mid) 60%,var(--shell-dark) 100%);
   box-shadow:0 18px 45px rgba(0,0,0,.9);
-  filter:saturate(115%);
 }
-/* ▶ 모서리 흐림용 오버레이 */
+/* 소프트 모서리용 흐림 */
 .shell::after{
   content:"";position:absolute;inset:-1px;border-radius:inherit;
-  box-shadow:0 0 55px 20px #000 inset; /* 두툼한 안쪽 그림자 */
-  filter:blur(3px);                    /* 소프트-엣지 효과 */
-  pointer-events:none;
+  box-shadow:0 0 60px 22px #000 inset;
+  filter:blur(2.5px);pointer-events:none;
 }
 
-/* ── 하부 장식 ── */
+/* 장식 */
 .vent{position:absolute;bottom:62px;left:50%;transform:translateX(-50%);
   width:360px;height:34px;border-radius:4px;
-  background:repeating-linear-gradient(to right,transparent 0 11px,#000 11px 21px);
-  opacity:.35;}
+  background:repeating-linear-gradient(to right,transparent 0 11px,#000 11px 21px);opacity:.35;}
 .power{position:absolute;right:60px;bottom:54px;width:60px;height:60px;
   background:#ff8a3a;border-radius:8px;
-  box-shadow:inset 0 0 8px rgba(255,255,255,.2),0 0 18px rgba(255,120,40,.55);}
+  box-shadow:inset 0 0 8px rgba(255,255,255,.18),0 0 16px rgba(255,120,40,.5);}
 
-/* ── 베젤 ── */
+/* 베젤 */
 .bezel{width:100%;height:100%;border-radius:22px;overflow:hidden;
-  background:radial-gradient(circle at 30% 10%,#122619 0%,#0b1a11 60%,#010602 100%);
-  box-shadow:inset 0 0 90px #000;}
+  background:#070d07;box-shadow:inset 0 0 90px #000;}
 
-/* ── CRT 화면 ── */
-#screen{position:absolute;inset:0;display:flex;flex-direction:column;
-  justify-content:center;align-items:center;color:var(--green);
-  text-shadow:0 0 6px var(--green);background:#021208;}
+/* CRT 화면 */
+#screen{position:absolute;inset:0;display:flex;flex-direction:column;justify-content:center;align-items:center;
+  color:var(--green);text-shadow:0 0 6px var(--green);background:#021208;}
 #screen::before{content:"";position:absolute;inset:0;
-  background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px),
-             radial-gradient(circle at center,#083c26 0%,transparent 60%);}
+  background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);}
 #screen::after{content:"";position:absolute;inset:0;
-  background:radial-gradient(ellipse at center,transparent 0,transparent 68%,rgba(0,0,0,.55) 100%);}
+  background:radial-gradient(ellipse at center,transparent 0,transparent 70%,rgba(0,0,0,.55) 100%);}
 
-/* ── UI 텍스트 ── */
+/* UI 텍스트 */
 h2{font-size:1.6vmin;margin-bottom:40px;letter-spacing:2px;}
 #typed{width:380px;max-width:70%;padding:5px 0;border-bottom:1px solid var(--green);
   font-size:1.9vmin;min-height:36px;text-align:center;letter-spacing:2px;}
@@ -83,8 +79,7 @@ input{caret-color:transparent;}
 </div>
 
 <script>
-const PASS="LETMEIN";
-let buf="",amb=false;
+const PASS="LETMEIN";let buf="",amb=false;
 let ctx;const AC=()=>ctx||(ctx=new(window.AudioContext||window.webkitAudioContext));
 function tone(f,t){const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
   o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
@@ -106,8 +101,7 @@ function check(){
   }else{
     msg.style.color="#f44";msg.textContent="ACCESS DENIED";tone(120,"sawtooth");
     const sc=document.getElementById("screen");sc.style.animation="glitch .35s 2";
-    setTimeout(()=>sc.style.animation="none",700);
-    buf="";typed.textContent="";
+    setTimeout(()=>sc.style.animation="none",700);buf="";typed.textContent="";
   }
 }
 </script>
