--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -18,34 +18,28 @@
 body{
   height:100vh;display:flex;justify-content:center;align-items:center;overflow:hidden;
   background:#000;
+  /* CRT 스캔라인 배경 */
   background-image:
     repeating-linear-gradient(rgba(0,0,0,.6) 0 4px,rgba(0,0,0,.8) 4px 8px);
 }
-#cabinet{
-  width:90vw;max-width:1000px;height:70vh;max-height:700px;
-  border-radius:80px;
-  background:radial-gradient(circle at center,
-              #181818 0%,
-              #111 60%,
-              #050505 85%,
-              #000 100%);
-  box-shadow:
-    0 0 80px rgba(0,0,0,.9) inset,
-    0 0 40px rgba(0,0,0,.8),
-    0 0 120px rgba(50,255,138,.18);
-  display:flex;justify-content:center;align-items:center;
-}
+
+/* ── 유리판(실제 화면) ── */
 #monitor{
-  position:relative;width:97%;height:92%;background:var(--bg);
+  width:90vw;max-width:1000px;height:70vh;max-height:700px;
+  position:relative;background:var(--bg);
   border-radius:50px;
   box-shadow:inset 0 0 140px #010;
   overflow:hidden;
 }
+
+/* ── 화면 텍스트 영역 ── */
 #screen{
   position:absolute;inset:0;
   display:flex;flex-direction:column;justify-content:center;align-items:center;
   color:var(--green);text-shadow:0 0 4px var(--green);
 }
+
+/* 스캔라인 + 비네팅 효과 */
 #screen::before{
   content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
@@ -56,12 +50,16 @@ body{
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
   pointer-events:none;
 }
+
+/* 화면 잡음 */
 #noise{
   position:absolute;inset:-35%;
   background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
   opacity:.05;animation:noise 1s steps(5) infinite;pointer-events:none;
 }
 @keyframes noise{to{transform:translate(50%,50%);}}
+
+/* 입력/메시지 영역 */
 h2{font-size:1.9vmin;margin-bottom:3vmin;}
 #typed{
   width:360px;max-width:60%;
@@ -70,20 +68,20 @@ h2{font-size:1.9vmin;margin-bottom:3vmin;}
 }
 #msg{margin-top:30px;font-size:2vmin;min-height:28px;color:#f44;}
 @keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
+
+/* 커서 깜빡임 제거 */
 input{caret-color:transparent;}
 </style>
 </head>
 <body>
 
-<div id="cabinet">
-  <div id="monitor">
-    <div id="screen">
-      <h2>ENTER THE PASSWORD</h2>
-      <div id="typed"></div>
-      <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
-      <div id="msg"></div>
-      <div id="noise"></div>
-    </div>
+<div id="monitor">
+  <div id="screen">
+    <h2>ENTER THE PASSWORD</h2>
+    <div id="typed"></div>
+    <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
+    <div id="msg"></div>
+    <div id="noise"></div>
   </div>
 </div>
 
@@ -102,6 +100,8 @@ function tone(freq, type){
   g.gain.exponentialRampToValueAtTime(0.0001, ac.currentTime + .35);
   osc.stop(ac.currentTime + .36);
 }
+
+/* 레트로 타자음 */
 function keyClick(low = false){
   const ac = AC(), osc = ac.createOscillator(), g = ac.createGain();
   osc.type = "square";
@@ -112,13 +112,17 @@ function keyClick(low = false){
   g.gain.exponentialRampToValueAtTime(0.0001, ac.currentTime + .04);
   osc.stop(ac.currentTime + .05);
 }
+
+/* 배경 Hum + 화이트노이즈 */
 function startAmbience(){
   if (ambienceStarted) return;
   ambienceStarted = true;
   const ac = AC();
+
   const hum = ac.createOscillator(), hg = ac.createGain();
   hum.type = "sine"; hum.frequency.value = 50; hg.gain.value = .02;
   hum.connect(hg).connect(ac.destination); hum.start();
+
   const size = ac.sampleRate * 2,
         bufN = ac.createBuffer(1, size, ac.sampleRate),
         data = bufN.getChannelData(0);
@@ -127,12 +131,14 @@ function startAmbience(){
   noise.buffer = bufN; noise.loop = true; ng.gain.value = .015;
   noise.connect(ng).connect(ac.destination); noise.start();
 }
+
 const typed = document.getElementById("typed"),
       msg   = document.getElementById("msg");
 
 document.addEventListener("keydown", (e) => {
   startAmbience();
   const k = e.key;
+
   if (k === "Backspace"){
     e.preventDefault();
     buf = buf.slice(0, -1);
@@ -140,17 +146,20 @@ document.addEventListener("keydown", (e) => {
     keyClick(true);
     return;
   }
+
   if (k === "Enter"){
     e.preventDefault();
     check();
     return;
   }
+
   if (k.length === 1 && buf.length < PASS.length){
     buf += k.toUpperCase();
     typed.textContent = buf;
     keyClick();
   }
 });
+
 function check(){
   if (buf === PASS){
     msg.style.color = "var(--green)";
