--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -7,39 +7,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
 :root{
-  --green:#32ff8a;
-  --bg:#031c11;
+  --green:#32ff8a;       /* 텍스트 네온색 */
+  --bg:#031c11;          /* 중앙 화면색 */
 }
-*{
-  margin:0;padding:0;box-sizing:border-box;
-  font-family:'Press Start 2P',Courier,monospace;
-  user-select:none;-webkit-user-select:none;-ms-user-select:none;
-}
+/* 기본 설정 */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Press Start 2P',Courier,monospace;
+  user-select:none;-webkit-user-select:none;-ms-user-select:none;}
 body{
   height:100vh;display:flex;justify-content:center;align-items:center;overflow:hidden;
-  background:#000;
-  /* CRT 스캔라인 배경 */
-  background-image:
-    repeating-linear-gradient(rgba(0,0,0,.6) 0 4px,rgba(0,0,0,.8) 4px 8px);
+  background:#000;  /* 외곽 암전 */
+  /* CRT 스캔라인 */
+  background-image:repeating-linear-gradient(rgba(0,0,0,.6) 0 4px,rgba(0,0,0,.8) 4px 8px);
 }
-
-/* ── 유리판(실제 화면) ── */
+/* ── 화면 전체(베젤 제거, 배경과 자연스러운 그라데이션) ── */
 #monitor{
   width:90vw;max-width:1000px;height:70vh;max-height:700px;
-  position:relative;background:var(--bg);
-  border-radius:50px;
-  box-shadow:inset 0 0 140px #010;
+  position:relative;
+  /* 중앙은 화면색, 가장자리는 투명 → body 배경과 자연스러운 연결 */
+  background:radial-gradient(circle at center,
+              var(--bg) 0%,
+              var(--bg) 60%,
+              transparent 100%);
   overflow:hidden;
 }
-
-/* ── 화면 텍스트 영역 ── */
+/* ── 실제 텍스트/그래픽 표시 영역 ── */
 #screen{
   position:absolute;inset:0;
   display:flex;flex-direction:column;justify-content:center;align-items:center;
   color:var(--green);text-shadow:0 0 4px var(--green);
 }
-
-/* 스캔라인 + 비네팅 효과 */
+/* 스캔라인 & 비네팅 */
 #screen::before{
   content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
@@ -50,8 +47,7 @@ body{
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
   pointer-events:none;
 }
-
-/* 화면 잡음 */
+/* 랜덤 화이트 노이즈 */
 #noise{
   position:absolute;inset:-35%;
   background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
@@ -59,17 +55,12 @@ body{
 }
 @keyframes noise{to{transform:translate(50%,50%);}}
 
-/* 입력/메시지 영역 */
+/* 텍스트·입력·메시지 */
 h2{font-size:1.9vmin;margin-bottom:3vmin;}
-#typed{
-  width:360px;max-width:60%;
-  padding:6px 0;border-bottom:1px solid var(--green);
-  font-size:2vmin;min-height:38px;text-align:center;letter-spacing:2px;
-}
+#typed{width:360px;max-width:60%;padding:6px 0;border-bottom:1px solid var(--green);
+  font-size:2vmin;min-height:38px;text-align:center;letter-spacing:2px;}
 #msg{margin-top:30px;font-size:2vmin;min-height:28px;color:#f44;}
 @keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
-
-/* 커서 깜빡임 제거 */
 input{caret-color:transparent;}
 </style>
 </head>
@@ -87,92 +78,47 @@ input{caret-color:transparent;}
 
 <script>
 const PASS = "LETMEIN";
-let buf = "", ambienceStarted = false;
+let buf="", ambienceStarted=false;
+let ctx;const AC=()=>ctx||(ctx=new(window.AudioContext||window.webkitAudioContext)());
 
-let ctx;
-const AC = () => ctx || (ctx = new (window.AudioContext || window.webkitAudioContext)());
+/* 합격·불합격 효과음 */
+function tone(f,t){const a=AC(),o=a.createOscillator(),g=a.createGain();
+o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(a.destination);
+o.start();g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.35);o.stop(a.currentTime+.36);}
 
-function tone(freq, type){
-  const ac = AC(), osc = ac.createOscillator(), g = ac.createGain();
-  osc.type = type; osc.frequency.value = freq; g.gain.value = .12;
-  osc.connect(g).connect(ac.destination);
-  osc.start();
-  g.gain.exponentialRampToValueAtTime(0.0001, ac.currentTime + .35);
-  osc.stop(ac.currentTime + .36);
-}
-
-/* 레트로 타자음 */
-function keyClick(low = false){
-  const ac = AC(), osc = ac.createOscillator(), g = ac.createGain();
-  osc.type = "square";
-  osc.frequency.value = low ? 180 : 820 + (Math.random()*60 - 30);
-  g.gain.value = .08;
-  osc.connect(g).connect(ac.destination);
-  osc.start();
-  g.gain.exponentialRampToValueAtTime(0.0001, ac.currentTime + .04);
-  osc.stop(ac.currentTime + .05);
-}
+/* 레트로 키보드 클릭음 */
+function keyClick(low=false){const a=AC(),o=a.createOscillator(),g=a.createGain();
+o.type="square";o.frequency.value=low?180:820+(Math.random()*60-30);g.gain.value=.08;
+o.connect(g).connect(a.destination);o.start();g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.04);
+o.stop(a.currentTime+.05);}
 
 /* 배경 Hum + 화이트노이즈 */
-function startAmbience(){
-  if (ambienceStarted) return;
-  ambienceStarted = true;
-  const ac = AC();
+function startAmbience(){if(ambienceStarted)return;ambienceStarted=true;const a=AC();
+const h=a.createOscillator(),hg=a.createGain();h.type="sine";h.frequency.value=50;hg.gain.value=.02;
+h.connect(hg).connect(a.destination);h.start();
+const size=a.sampleRate*2,b=a.createBuffer(1,size,a.sampleRate),d=b.getChannelData(0);
+for(let i=0;i<size;i++)d[i]=Math.random()*2-1;
+const n=a.createBufferSource(),ng=a.createGain();n.buffer=b;n.loop=true;ng.gain.value=.015;
+n.connect(ng).connect(a.destination);n.start();}
 
-  const hum = ac.createOscillator(), hg = ac.createGain();
-  hum.type = "sine"; hum.frequency.value = 50; hg.gain.value = .02;
-  hum.connect(hg).connect(ac.destination); hum.start();
+const typed=document.getElementById("typed"),msg=document.getElementById("msg");
 
-  const size = ac.sampleRate * 2,
-        bufN = ac.createBuffer(1, size, ac.sampleRate),
-        data = bufN.getChannelData(0);
-  for (let i = 0; i < size; i++) data[i] = Math.random() * 2 - 1;
-  const noise = ac.createBufferSource(), ng = ac.createGain();
-  noise.buffer = bufN; noise.loop = true; ng.gain.value = .015;
-  noise.connect(ng).connect(ac.destination); noise.start();
-}
-
-const typed = document.getElementById("typed"),
-      msg   = document.getElementById("msg");
-
-document.addEventListener("keydown", (e) => {
-  startAmbience();
-  const k = e.key;
-
-  if (k === "Backspace"){
-    e.preventDefault();
-    buf = buf.slice(0, -1);
-    typed.textContent = buf;
-    keyClick(true);
-    return;
-  }
-
-  if (k === "Enter"){
-    e.preventDefault();
-    check();
-    return;
-  }
-
-  if (k.length === 1 && buf.length < PASS.length){
-    buf += k.toUpperCase();
-    typed.textContent = buf;
-    keyClick();
-  }
+document.addEventListener("keydown",e=>{
+  startAmbience();const k=e.key;
+  if(k==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;keyClick(true);return;}
+  if(k==="Enter"){e.preventDefault();check();return;}
+  if(k.length===1&&buf.length<PASS.length){buf+=k.toUpperCase();typed.textContent=buf;keyClick();}
 });
 
 function check(){
-  if (buf === PASS){
-    msg.style.color = "var(--green)";
-    msg.textContent = "ACCESS GRANTED";
-    tone(440, "triangle");
-    setTimeout(()=>location.href="system-01-Acess.html", 1400);
-  } else {
-    msg.style.color = "#f44";
-    msg.textContent = "ACCESS DENIED";
-    tone(120, "sawtooth");
-    document.getElementById("screen").style.animation = "glitch .35s 2";
-    setTimeout(()=>document.getElementById("screen").style.animation = "none", 700);
-    buf = ""; typed.textContent = "";
+  if(buf===PASS){
+    msg.style.color="var(--green)";msg.textContent="ACCESS GRANTED";tone(440,"triangle");
+    setTimeout(()=>location.href="system-01-Acess.html",1400);
+  }else{
+    msg.style.color="#f44";msg.textContent="ACCESS DENIED";tone(120,"sawtooth");
+    document.getElementById("screen").style.animation="glitch .35s 2";
+    setTimeout(()=>document.getElementById("screen").style.animation="none",700);
+    buf="";typed.textContent="";
   }
 }
 </script>
