--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -7,42 +7,33 @@
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
 :root{
-  --green:#32ff8a;   /* 네온 텍스트 */
+  --green:#32ff8a;   /* 네온 글자색  */
+  --bg:#031c11;      /* 중앙 화면 기본색 */
 }
 /* 공통 */
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Press Start 2P',Courier,monospace;
+*{margin:0;padding:0;box-sizing:border-box;
+  font-family:'Press Start 2P',Courier,monospace;
   user-select:none;-webkit-user-select:none;-ms-user-select:none;}
-
-/* ── 바깥 배경 : 중앙 밝음 → 외곽 암전 + CRT 스캔라인 ── */
 body{
   height:100vh;display:flex;justify-content:center;align-items:center;overflow:hidden;
   background:#000;
-  background-image:
-    radial-gradient(circle at center,#013920 0%,#001610 55%,#000 100%),
-    repeating-linear-gradient(rgba(0,0,0,.6) 0 4px,rgba(0,0,0,.8) 4px 8px);
-  background-repeat:no-repeat;
+  /* CRT 스캔라인 */
+  background-image:repeating-linear-gradient(rgba(0,0,0,.6) 0 4px,rgba(0,0,0,.8) 4px 8px);
 }
 
-/* ── 얇은 베젤 ── */
-#bezel{
-  padding:1.2vmin;                      /* 베젤 두께 */
-  width:90vw;max-width:1000px;
-  height:70vh;max-height:700px;
-  background:#101010;
-  border-radius:36px;
-  box-shadow:0 0 50px rgba(0,0,0,.8) inset,0 0 40px rgba(0,0,0,.7);
-  display:flex;justify-content:center;align-items:center;
-}
-
-/* ── 실제 화면 ── */
+/* ── 화면 (얇은 베젤 + 덜 둥근 모서리 + 내부 그라데이션) ── */
 #monitor{
-  flex:1;
+  width:90vw;max-width:1000px;height:70vh;max-height:700px;
   position:relative;
-  /* 위쪽 밝게, 아래쪽 짙게 → 글자 가독성 개선 */
-  background:linear-gradient(#0e3c29 0%, #06281a 100%);
-  border:2px solid #0a3b29;
-  border-radius:22px;                   /* 덜 둥근 꼭지점 */
-  box-shadow:0 0 40px rgba(50,255,138,.15), inset 0 0 100px #010;
+  border:6px solid #222;            /* 얇은 베젤 */
+  border-radius:30px;               /* 덜 둥근 꼭지점 */
+  /* 중앙은 밝고, 가장자리로 갈수록 어두워지는 그라데이션 */
+  background:radial-gradient(
+    circle at center,
+    #154c30 0%,           /* 중간보다 약간 밝은 색상 */
+    var(--bg) 60%,        /* 기본 화면 색 */
+    #000 100%             /* 바깥쪽은 완전 어둡게 */
+  );
   overflow:hidden;
 }
 
@@ -53,14 +44,14 @@ body{
   color:var(--green);text-shadow:0 0 4px var(--green);
 }
 
-/* 스캔라인 + 비네트 (텍스트 위로 안 덮이도록 z-index -1) */
+/* 스캔라인 + 비네팅 */
 #screen::before{
-  content:"";position:absolute;inset:0;z-index:-1;
+  content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
   mix-blend-mode:overlay;pointer-events:none;
 }
 #screen::after{
-  content:"";position:absolute;inset:0;z-index:-1;
+  content:"";position:absolute;inset:0;
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
   pointer-events:none;
 }
@@ -69,11 +60,11 @@ body{
 #noise{
   position:absolute;inset:-35%;
   background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
-  opacity:.05;animation:noise 1s steps(5) infinite;pointer-events:none;z-index:-1;
+  opacity:.05;animation:noise 1s steps(5) infinite;pointer-events:none;
 }
 @keyframes noise{to{transform:translate(50%,50%);}}
 
-/* 입력·메시지 */
+/* 텍스트 · 입력 · 메시지 */
 h2{font-size:1.9vmin;margin-bottom:3vmin;}
 #typed{width:360px;max-width:60%;padding:6px 0;border-bottom:1px solid var(--green);
   font-size:2vmin;min-height:38px;text-align:center;letter-spacing:2px;}
@@ -84,15 +75,13 @@ input{caret-color:transparent;}
 </head>
 <body>
 
-<div id="bezel">
-  <div id="monitor">
-    <div id="screen">
-      <h2>ENTER THE PASSWORD</h2>
-      <div id="typed"></div>
-      <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
-      <div id="msg"></div>
-      <div id="noise"></div>
-    </div>
+<div id="monitor">
+  <div id="screen">
+    <h2>ENTER THE PASSWORD</h2>
+    <div id="typed"></div>
+    <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
+    <div id="msg"></div>
+    <div id="noise"></div>
   </div>
 </div>
 
@@ -101,18 +90,15 @@ const PASS="LETMEIN";
 let buf="", ambienceStarted=false;
 let ctx;const AC=()=>ctx||(ctx=new(window.AudioContext||window.webkitAudioContext)());
 
-/* 확인·실패 효과음 */
 function tone(f,t){const a=AC(),o=a.createOscillator(),g=a.createGain();
 o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(a.destination);
 o.start();g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.35);o.stop(a.currentTime+.36);}
 
-/* 레트로 키보드 클릭음 */
 function keyClick(low=false){const a=AC(),o=a.createOscillator(),g=a.createGain();
 o.type="square";o.frequency.value=low?180:820+(Math.random()*60-30);g.gain.value=.08;
-o.connect(g).connect(a.destination);o.start();
-g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.04);o.stop(a.currentTime+.05);}
+o.connect(g).connect(a.destination);o.start();g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.04);
+o.stop(a.currentTime+.05);}
 
-/* 배경 Hum + 화이트 노이즈 */
 function startAmbience(){if(ambienceStarted)return;ambienceStarted=true;const a=AC();
 const h=a.createOscillator(),hg=a.createGain();h.type="sine";h.frequency.value=50;hg.gain.value=.02;
 h.connect(hg).connect(a.destination);h.start();
